Add editable IPO company images
